--- a/contenedor2.html
+++ b/contenedor2.html
@@ -24,44 +24,10 @@
             transform: translate(-50%, -50%);
             width: 360px;
             background-color: rgb(20, 20, 20);
-            border-radius: 5px 20px;
+            border-radius: 5px;
             box-shadow: 2.5px 2.5px 5px grey;
             color: #fff;
             border: 2px solid rgb(20, 20, 20);
-        }
-
-        #shower>#botones {
-            position: absolute;
-            top: 5px;
-            right: 5px;
-            background-color: #fff;
-            border-radius: 20px;
-            padding: 5px;
-            box-shadow: inset 2.5px 2.5px 5px grey;
-            border: 2px solid rgb(20, 20, 20);
-        }
-
-        #shower>#botones>button {
-            border-radius: 15px;
-            padding: 1px 5px;
-            border: none;
-            background-color: grey;
-            color: #fff;
-            cursor: pointer;
-            box-shadow: 2.5px 2.5px 5px grey;
-            font-size: medium;
-        }
-
-        #shower>#botones>button:nth-child(1) {
-            background-color: #089000;
-        }
-
-        #shower>#botones>button:nth-child(2) {
-            background-color: #6698ff;
-        }
-
-        #shower>#botones>button:nth-child(3) {
-            background-color: #ff3b3b;
         }
 
         #namePriceContainer,
@@ -69,6 +35,7 @@
             border-spacing: 0;
         }
 
+        /* Name and Price's Style */
         #namePriceContainer tbody tr:nth-child(1) {
             background: linear-gradient(to bottom,
                     rgba(20, 20, 20, 0.40) 40%,
@@ -83,12 +50,12 @@
         }
 
         #namePriceContainer tbody tr:nth-child(1) td:nth-child(1) {
+            width: 100%;
             border-radius: 3px 0 0 0;
         }
 
         #namePriceContainer tbody tr:nth-child(1) td:nth-child(2) {
-            border-radius: 0 18px 0 0;
-            text-align: center;
+            border-radius: 0 3px 0 0;
         }
 
         #namePriceContainer tbody tr:nth-child(1) td:nth-child(2) p {
@@ -100,109 +67,51 @@
             content: 'S/ ';
         }
 
-        #orderContainer tbody tr:nth-child(1) td,
-        #orderContainer tbody tr:nth-child(2) td {
+        /* Order Form container's style */
+        #orderContainer tr td {
             padding: 10px;
         }
 
-        #orderContainer tbody tr:nth-child(1) td:nth-child(2) {
-            text-align: center;
+        #orderContainer td td:nth-child(1) {
+            width: 100%;
         }
 
-        #orderContainer tbody tr:nth-child(1) td:nth-child(2)>div {
-            width: max-content;
-        }
-
-        #orderContainer tbody tr:nth-child(1) td:nth-child(2) button {
-            border-radius: 15px;
+        #min,
+        #max {
             padding: 4px 8px;
             border: 2px solid #fff;
-            background-color: #fff;
-            color: #000;
-            cursor: pointer;
-            font-size: medium;
+            border-radius: 15px;
             font-weight: bold;
+            outline: none;
         }
 
-        #orderContainer tbody tr:nth-child(1) td:nth-child(2) input {
-            border-radius: 5px;
+        #quantity {
             padding: 4px 8px;
-            font-size: medium;
             border: 2px solid #fff;
             background-color: rgb(20, 20, 20);
             color: #fff;
+            border-radius: 5px;
             text-align: center;
             outline: none;
-            width: 25px;
-            font-weight: bold;
+            width: 40px;
         }
 
-        #orderContainer tbody tr:nth-child(1) td:nth-child(2) input::-webkit-inner-spin-button,
-        #orderContainer tbody tr:nth-child(1) td:nth-child(2) input::-webkit-outer-spin-button {
+        #quantity::-webkit-inner-spin-button,
+        #quantity::-webkit-outer-spin-button {
             -webkit-appearance: none;
             margin: 0;
-        }
-
-        #orderContainer tbody tr:nth-child(2) td:nth-child(1) button {
-            padding: 4px 8px;
-            font-size: medium;
-            border: 2px solid #fff;
-            background-color: transparent;
-            border-radius: 5px;
-            cursor: pointer;
-            color: #fff;
-            transition: 0.3s;
-            text-transform: uppercase;
-            width: 100%;
-            height: 100%;
-        }
-
-        #orderContainer tbody tr:nth-child(2) td:nth-child(1) button:hover {
-            background-color: #ffffff22;
-        }
-
-        #orderContainer tbody tr:nth-child(1) td:nth-child(1) textarea {
-            display: block;
-            background-color: rgb(20, 20, 20);
-            border: 2px solid #fff;
-            border-radius: 5px 5px 5px 10px;
-            outline: none;
-            padding: 5px;
-            color: #fff;
-            width: calc(100% - 14px);
-            height: 66px;
-            resize: none;
-        }
-
-        #orderContainer tbody tr:nth-child(1) td:nth-child(1) textarea::placeholder {
-            color: grey;
-        }
-
-        #orderContainer tbody tr:nth-child(1) td:nth-child(1) textarea::-webkit-scrollbar {
-            width: 4px;
-            height: 4px;
-        }
-
-        #orderContainer tbody tr:nth-child(1) td:nth-child(1) textarea::-webkit-scrollbar-thumb {
-            background: #fff;
-            border-radius: 5px;
         }
     </style>
 </head>
 
 <body>
     <div id="shower">
-        <div id="botones">
-            <button id="quantityLbl">0</button>
-            <button>S/ 0.00</button>
-            <button id="cancel">X</button>
-        </div>
         <table id="namePriceContainer">
             <tbody>
                 <tr>
                     <td>Pollo a la plancha con arroz blanco</td>
                     <td>
-                        <p id="price">12.50</p>
+                        <p id="realPrice">12.50</p>
                     </td>
                 </tr>
             </tbody>
@@ -210,9 +119,6 @@
         <table id="orderContainer">
             <tbody>
                 <tr>
-                    <td rowspan="2">
-                        <textarea id="" placeholder="¿Tienes alguna especificación?"></textarea>
-                    </td>
                     <td>
                         <div>
                             <button id="min">-</button>
@@ -220,10 +126,24 @@
                             <button id="max">+</button>
                         </div>
                     </td>
+                    <td>
+                        <div id="totalPrice">
+                            0.00
+                        </div>
+                    </td>
+                </tr>
+                <tr>
+                    <td rowspan="2">
+                        <label for="specification">¿Tienes alguna especificación?</label>
+                        <textarea id="specification"></textarea>
+                    </td>
+                    <td>
+                        <button id="accept">Aceptar</button>
+                    </td>
                 </tr>
                 <tr>
                     <td>
-                        <button id="accept">Aceptar</button>
+                        <button>Cancelar</button>
                     </td>
                 </tr>
             </tbody>
