--- a/contenedor2.html
+++ b/contenedor2.html
@@ -11,6 +11,7 @@
             margin: 0;
             padding: 0;
             font-family: 'Courier New', Courier, monospace;
+            box-sizing: border-box;
         }
 
         body {
@@ -70,9 +71,10 @@
         /* Order Form container's style */
         #orderContainer tr td {
             padding: 10px;
+            text-align: center;
         }
 
-        #orderContainer td td:nth-child(1) {
+        #orderContainer tr:nth-child(1) td {
             width: 100%;
         }
 
@@ -81,25 +83,90 @@
             padding: 4px 8px;
             border: 2px solid #fff;
             border-radius: 15px;
+            font-size: medium;
             font-weight: bold;
             outline: none;
+            cursor: pointer;
         }
 
         #quantity {
             padding: 4px 8px;
             border: 2px solid #fff;
-            background-color: rgb(20, 20, 20);
+            background-color: rgb(40, 40, 40);
             color: #fff;
             border-radius: 5px;
             text-align: center;
+            font-size: medium;
+            font-weight: bold;
             outline: none;
-            width: 40px;
+            width: 50px;
         }
 
         #quantity::-webkit-inner-spin-button,
         #quantity::-webkit-outer-spin-button {
             -webkit-appearance: none;
             margin: 0;
+        }
+
+        #totalPrice {
+            margin: auto;
+            padding: 4px 8px;
+            width: max-content;
+            background-color: #6698ff;
+            font-weight: bold;
+            border: 2px solid #6698ff;
+            border-radius: 5px;
+        }
+
+        #totalPrice::before {
+            content: 'S/ ';
+        }
+
+        #accept,
+        #cancel {
+            padding: 4px 10px;
+            border: 2px solid #fff;
+            border-radius: 5px;
+            background-color: transparent;
+            color: #fff;
+            font-size: medium;
+            font-weight: bold;
+            width: 100%;
+            cursor: pointer;
+            transition: 0.3s;
+        }
+
+        #accept {
+            border-color: #089000;
+            background-color: #089000;
+        }
+
+        #cancel {
+            border-color: #ff3b3b;
+            background-color: #ff3b3b;
+        }
+
+        #accept:hover,
+        #cancel:hover {
+            filter: opacity(0.85);
+        }
+
+        #orderContainer table tbody tr:nth-child(2) td:nth-child(1) {
+            text-align: left;
+        }
+
+        #specification {
+            display: block;
+            width: 100%;
+            height: 80px;
+            border: 2px solid #fff;
+            border-radius: 5px;
+            background-color: rgb(40, 40, 40);
+            padding: 5px;
+            color: #fff;
+            outline: none;
+            resize: none;
+            overflow-x: hidden;
         }
     </style>
 </head>
@@ -127,15 +194,12 @@
                         </div>
                     </td>
                     <td>
-                        <div id="totalPrice">
-                            0.00
-                        </div>
+                        <div id="totalPrice">0.00</div>
                     </td>
                 </tr>
                 <tr>
                     <td rowspan="2">
-                        <label for="specification">¿Tienes alguna especificación?</label>
-                        <textarea id="specification"></textarea>
+                        <textarea id="specification" placeholder="Especificaciones..."></textarea>
                     </td>
                     <td>
                         <button id="accept">Aceptar</button>
@@ -143,7 +207,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <button>Cancelar</button>
+                        <button id="cancel">Cancelar</button>
                     </td>
                 </tr>
             </tbody>
@@ -151,9 +215,7 @@
     </div>
     <script src="/assets/js/jquery-3.6.0.min.js"></script>
     <script>
-        $('#quantityLbl').click(function () {
-            $('#quantity').focus().select();
-        });
+        var price = 12.50;
         $('#min').click(function () {
             var input = $('#quantity');
             var quantity = parseInt(input.val());
@@ -186,14 +248,9 @@
                 quantity = 0;
             }
             $(this).val(quantity);
-            var price = parseFloat($('#price').text());
             var totalPrice = (quantity * price).toFixed(2);
 
-            var button1 = $('#shower #botones button:nth-child(1)');
-            var button2 = $('#shower #botones button:nth-child(2)');
-
-            button1.text(quantity);
-            button2.text('S/ ' + totalPrice);
+            $('#totalPrice').text(totalPrice);
         })
     </script>
 </body>
