--- a/contenedor2.html
+++ b/contenedor2.html
@@ -79,7 +79,8 @@
         }
 
         #min,
-        #max {
+        #max,
+        #max5 {
             padding: 4px 8px;
             border: 2px solid #fff;
             border-radius: 15px;
@@ -134,6 +135,7 @@
             width: 100%;
             cursor: pointer;
             transition: 0.3s;
+            user-select: none;
         }
 
         #accept {
@@ -190,7 +192,8 @@
                         <div>
                             <button id="min">-</button>
                             <input type="number" id="quantity" min="0" value="0" max="20">
-                            <button id="max">+</button>
+                            <button id="max" value="1">+</button>
+                            <button id="max5" value="5">+5</button>
                         </div>
                     </td>
                     <td>
@@ -230,11 +233,23 @@
             input.val(quantity + 1);
             input.trigger('change');
         })
+        $('#max5').click(function () {
+            var input = $('#quantity');
+            var quantity = parseInt(input.val());
+
+            input.val(quantity + 5);
+            input.trigger('change');
+        })
         $('#cancel').click(function () {
             var input = $('#quantity');
+            var textarea = $('#specification');
 
             input.val(0);
             input.trigger('change');
+            textarea.val(null)
+        })
+        $('#quantity').on('focus', function () {
+            $(this).select();
         })
         $('#quantity').on('change', function () {
             var quantity = parseInt($(this).val());
