--- a/contenedor1.html
+++ b/contenedor1.html
@@ -26,7 +26,7 @@
 
         .dishContainer {
             position: relative;
-            margin: 5px;
+            margin: 10px;
             max-width: 100%;
             width: 240px;
             border: 2px solid rgb(20, 20, 20);
@@ -39,10 +39,31 @@
             background-position: center center;
         }
 
+        .dishContainer>button {
+            display: none;
+        }
+
+        .dishContainer>button.selected {
+            display: unset;
+            position: absolute;
+            top: -12px;
+            right: -12px;
+            padding: 1px 5px;
+            border-radius: 15px;
+            font-size: medium;
+            font-weight: bold;
+            border: 2px solid rgb(20, 20, 20);
+            border-bottom-left-radius: 5px;
+            background-color: #ff3b3b;
+            color: #fff;
+            cursor: pointer;
+        }
+
         .dishContainer>table {
             width: 100%;
             height: 240px;
             max-height: 120px;
+            border-spacing: 0;
         }
 
         .dishContainer>table>tbody>tr>td {
@@ -50,7 +71,7 @@
             vertical-align: bottom;
             color: #fff;
             font-weight: bold;
-            -webkit-text-stroke: 0.5px rgb(20, 20, 20);
+            text-shadow: 0 0 5px rgb(20, 20, 20);
         }
 
         .dishContainer>table>tbody>tr>td:nth-child(1) {
@@ -59,7 +80,7 @@
 
         .dishContainer>table>tbody>tr>td:nth-child(2) button {
             font-size: medium;
-            border: 2px solid transparent;
+            border: none;
             border-radius: 5px;
             background-color: transparent;
             color: #fff;
@@ -76,14 +97,60 @@
 <body>
     <div id="dishes">
         <div class="dishContainer">
-            <table>
-                <tbody>
-                    <tr>
+            <button class="selected" title="Quitar">X</button>
+            <table><tbody><tr>
                         <td>Pollo a la plancha con arroz blanco</td>
                         <td><button>12.50</button></td>
-                    </tr>
-                </tbody>
-            </table>
+            </tr></tbody></table>
+        </div>
+        <div class="dishContainer">
+            <button class="selected" title="Quitar">X</button>
+            <table><tbody><tr>
+                        <td>Pollo a la plancha con arroz blanco</td>
+                        <td><button>12.50</button></td>
+            </tr></tbody></table>
+        </div>
+        <div class="dishContainer">
+            <button class="selected" title="Quitar">X</button>
+            <table><tbody><tr>
+                        <td>Pollo a la plancha con arroz blanco</td>
+                        <td><button>12.50</button></td>
+            </tr></tbody></table>
+        </div>
+        <div class="dishContainer">
+            <button class="selected" title="Quitar">X</button>
+            <table><tbody><tr>
+                        <td>Pollo a la plancha con arroz blanco</td>
+                        <td><button>12.50</button></td>
+            </tr></tbody></table>
+        </div>
+        <div class="dishContainer">
+            <button class="selected" title="Quitar">X</button>
+            <table><tbody><tr>
+                        <td>Pollo a la plancha con arroz blanco</td>
+                        <td><button>12.50</button></td>
+            </tr></tbody></table>
+        </div>
+        <div class="dishContainer">
+            <button class="selected" title="Quitar">X</button>
+            <table><tbody><tr>
+                        <td>Pollo a la plancha con arroz blanco</td>
+                        <td><button>12.50</button></td>
+            </tr></tbody></table>
+        </div>
+        <div class="dishContainer">
+            <button class="selected" title="Quitar">X</button>
+            <table><tbody><tr>
+                        <td>Pollo a la plancha con arroz blanco</td>
+                        <td><button>12.50</button></td>
+            </tr></tbody></table>
+        </div>
+        <div class="dishContainer">
+            <button class="selected" title="Quitar">X</button>
+            <table><tbody><tr>
+                        <td>Pollo a la plancha con arroz blanco</td>
+                        <td><button>12.50</button></td>
+            </tr></tbody></table>
         </div>
     </div>
 </body>
