--- a/contenedor2.html
+++ b/contenedor2.html
@@ -39,8 +39,8 @@
         /* Name and Price's Style */
         #namePriceContainer tbody tr:nth-child(1) {
             background: linear-gradient(to bottom,
-                    rgba(20, 20, 20, 0.40) 40%,
-                    rgb(20, 20, 20)), url('/files/maindata/prueba.jpg');
+                    rgba(20, 20, 20, 0.125) 40%,
+                    rgba(20, 20, 20, 0.625)), url('/files/maindata/prueba.jpg');
             background-size: cover;
             background-position: center center;
             text-shadow: 0 0 10px black;
