--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="https://www.gstatic.com/firebasejs/8.6.0/firebase-firestore.js"></script>
     <script src="assets/js/jquery-3.6.0.min.js"></script>
     <style id="config"></style>
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
