--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SHOP | Gysmoy</title>
-    <script src="https://www.gstatic.com/firebasejs/8.6.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.6.0/firebase-firestore.js"></script>
+    <!--script src="https://www.gstatic.com/firebasejs/9.1.3/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.1.3/firebase-firestore.js"></script-->
     <script src="assets/js/jquery-3.6.0.min.js"></script>
     <style id="config"></style>
     <link rel="stylesheet" href="assets/css/style.css">
@@ -82,7 +82,7 @@
 
     <script src="assets/js/setConfig.js"></script>
     <script src="assets/js/setMenu.js"></script>
-    <script src="assets/js/firestore.js"></script>
+    <script type="module" src="assets/js/firestore.js"></script>
 </body>
 
 </html>
