--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
     <!--script src="https://www.gstatic.com/firebasejs/9.1.3/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.1.3/firebase-firestore.js"></script-->
     <script src="assets/js/jquery-3.6.0.min.js"></script>
-    <style id="config"></style>
+    <style id="generalConfig"></style>
+    <style id="especificConfig"></style>
     <link rel="stylesheet" href="assets/css/style.css">
+    <script src="assets/js/guid.min.js"></script>
+    <script src="assets/js/globalVar.js"></script>
 </head>
 
 <body>
@@ -18,7 +21,9 @@
     <header>
         <img src="" alt="Mozo en línea" id="logo" loading="lazy">
         <div>
-            <select id="menu"></select>
+            <select id="menu">
+                <option value="">Contenedor 1</option>
+            </select>
             <button id="ordenar">Ordenar [<span id="total">S/ 00.00</span>]</button>
             <button id="btncarrito">🛒 [<span id="spancarrito">0</span>]</button>
         </div>
