--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div id="dishes">
             <div class="dishContainer placeholder-item skeleton" style="
                     background: linear-gradient(to bottom,
-                        rgb(233, 231, 231) 40%,
+                        rgb(233, 231, 231),
                         rgb(231, 231, 231));
                     background-size: cover;
                     background-position: center center; width: 200px;height: 100px; padding-top: 40px;
